@@ -38,6 +38,10 @@
 <p>2015-09-13  Bob Friesenhahn  &lt;<a class="reference external" href="mailto:bfriesen&#37;&#52;&#48;simple&#46;dallas&#46;tx&#46;us">bfriesen<span>&#64;</span>simple<span>&#46;</span>dallas<span>&#46;</span>tx<span>&#46;</span>us</a>&gt;</p>
 <blockquote>
 <ul class="simple">
+<li>coders/palm.c: Palm static arrays should be 'const'.</li>
+<li>coders/meta.c (jpeg_embed): Stop sharing writeable static string
+'psheader'.
+(tag_spec): The 'tags' static array should be all 'const'.</li>
 <li>coders/jp2.c: Try to reduce the amount of non-const static data.</li>
 <li>coders/dcm.c (dicom_info): Try to make dicom_info array more
 'const'.</li>
